deployments/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logagg
  labels:
    app.kubernetes.io/part-of: logagg
